Final Integration of Backend code generation
